# cosmos-corp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.changeset/: fix-docker-path-gui-launch.md  initial-onboarding-and-flux.md
.github/workflows/: changesets.yml  ci.yml  release.yml
content/chapter-01-terminal/: chapter.yaml  course.md
content/chapter-01-terminal/mission-01-first-steps/: check.sh  dialogue.md  (+3 more)
content/chapter-02-git/: chapter.yaml  course.md
content/chapter-03-k8s/: chapter.yaml  course.md
content/chapter-04-flux/: chapter.yaml  course.md
docs/characters/: sage.md
lab-images/flux-lab/: Dockerfile  bashrc  flux-entrypoint.sh  git-http.conf  git-server.yaml  seed-deploy-repo.sh
lab-images/git-lab/: Dockerfile  bash_profile  bashrc  gitconfig  seed-repos.sh
lab-images/k8s-lab/: Dockerfile  bashrc  cosmos-k8s-entry.sh
lab-images/terminal-base/: Dockerfile  bashrc
scripts/: build-images.sh  sync-version.mjs  tag-release.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  validator.rs
src-tauri/src/commands/: cluster.rs  docker.rs  mission.rs  mod.rs  ping.rs  pty.rs  save.rs
src/components/: ChapterMap.tsx  ClusterView.tsx  DialogueBox.tsx  HintButton.tsx  InspectPanel.tsx  LessonCard.tsx  ObjectivePanel.tsx  SageAvatar.tsx  Terminal.tsx  markdown.tsx
src/game/: content-loader.ts  engine.ts  personalize.ts  save.ts  store.ts
src/ipc/: contract.ts
src/scenes/: ChapterIntro.tsx  ChapterMapScene.tsx  ChapterSelectScene.tsx  CourseScene.tsx  DevTerminalScene.tsx  MissionScene.tsx  OnboardingScene.tsx  TitleScene.tsx
src/styles/: globals.css
(+145 files in other folders)
