[package]
name = "cosmos-corp"
version = "0.1.0"
description = "Cosmos Corp: a macOS RPG that teaches DevOps fundamentals"
authors = ["Hubert Gauthier <hubertgauthier5@gmail.com>"]
edition = "2021"

[lib]
name = "cosmos_corp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Stream A will add: portable-pty, bollard, tokio, tracing, anyhow, thiserror

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
