[package]
name = "cosmos-corp"
version = "0.2.1"
description = "Cosmos Corp: a macOS RPG that teaches DevOps fundamentals"
authors = ["Hubert Gauthier <hubertgauthier5@gmail.com>"]
edition = "2021"

[lib]
name = "cosmos_corp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Stream A - backend runtime + PTY + Docker + diagnostics
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
bollard = "0.18"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
futures-util = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
